added-preloader-gif

--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
     <script src="public/js/qrcode.js"></script>
     <script src="public/js/GetUrlParams.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
 
     <title>Thomas Ridings | A little about me</title>
 
@@ -44,6 +45,7 @@
   </head>
 
   <body>
+  		<div class="se-pre-con"></div>
 		<div class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
@@ -318,6 +320,13 @@
 
 		<script src="public/js/head.min.js"></script>
 		<script src="public/js/reveal.js"></script>
+
+		<script>
+  		$(window).load(function() {
+		// Animate loader off screen
+		$(".se-pre-con").fadeOut("slow");;
+		});
+ 		</script>
 
 		<script>
 
