--- a/views/index.jade
+++ b/views/index.jade
@@ -145,10 +145,10 @@ html
 							xsmall
 								| #{description}
 
-				section
-					+job(pagecontent.getText('job.Role'), pagecontent.getText('job.description'), pagecontent.getImage('job.image').url)
-
-					+project('Vodadfone Italy Digital Transformation', 'I worked as part of an eight-person team to produce a digital strategy for Vodafone Italy. We used design thinking to define a target set of customer journeys and a three-year transformation (both organisational and technology) roadmap required to enable them. This was presented back to a C-level audience with 12, 24 & 36-month visions of the customer journey that would be realised along the way. I contributed to the customer journey work, supported a senior architect in assesing the existing OSS/BSS landscape, helped define the IT roadmap and created a proposed organisation structure for the programme.', '3 months',"./public/images/Vodafone_logo_svg.png")
+				
+				each job in pagecontent
+					section
+						+job(job.getText('job.Role'), job.getText('job.description'), job.getImage('job.image').url)
 
 				section(style='text-align: left;')
 					h1 THE END
