--- a/views/index.jade
+++ b/views/index.jade
@@ -66,10 +66,9 @@ html
 					p
 						xsmall
 							a
-								| I am a business-minded engineer with experience of digital strategy design and IT project delivery across Financial Services and Telecommunications. I currently work as a strategy consultant for IBM; helping large enterprises to redefine/reimagine their customer (and employee) experiences and engineer technology platforms to enable.
-								br
-								br
-								| I am a graduate of Engineering & Business Management from Warwick University, an avid techie, a keen lacrosse player and an amateur chef.
+								| I am an engineer who enjoys building web stuff.
+								| I work as a digital strategy consultant at PostShift.
+								| (I also play lacrosse, love cooking and spend as much time as I can in snow filled mountains.)
 
 				section
 					p
